--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -46,4 +46,5 @@ This results in the following data:
 realationship}{AngDistTheo}
 
 \section{Conclusion}
-Based on the gathered data and the results thereof, we can 
+It appears that the theoretical data is off from the test data. We need to
+figure out why!
