--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -121,7 +121,7 @@ is inconvenient.
   \item I/O Ports - the number of available I/O Ports needs to be able to support a range of sensors and some motors. For this reason the NXT is a little limiting, compared to the arduino, although the use of a multiplexer can allow expansion of existing ports.
 \end{itemize}
 
-\fix{Overvej muligheden for at kombinere begge platforme. Hvorfor/Hvorfor ikke?}
+\fix{Overvej muligheden for at kombinere begge platforme. Hvorfor/Hvorfor ikke?}{}
 
 In conclusion the group has chosen the Lego NXT platform for use in the project based on the following criteria:
 \begin{itemize}
