--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -89,7 +89,8 @@ This leads to the following problems:
 
 \section{Summary}
 In conclusion, we construct an ideal scenario based on the initial problem. We
-already determined certain hard requirements based on the semester topic:
+already determined the following as hard requirements based on the semester
+topic:
 
 \begin{enumerate}
 	\item The system must be embedded
