--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,11 +1,12 @@
 \section{Requirements}
 
-Based on\ldots, we can determine the requirements for \namep. These requirements
-can further be divided into the groups ``Need to have'' and ``Nice to have''.
+Based on \fix{\ldots}{we need to base it on problem statement or somethign
+like that}, we can determine the requirements for an autonomous turret.
+These requirements can further be divided into the groups ``Need to have'' and
+``Nice to have'' in order to prioritize between them.
 
 \subsection{Need to have}
-The following requirements have been deemed necessary for the system:
-
+The following requirements have been deemed necessary for an autonomous turret:
 \begin{itemize}
   \item The turret needs to be an embedded system and incorparate elements from
   the courses MI and RTS. This is necessary as it is required by the semester.
@@ -41,6 +42,12 @@ turret would be able to hit the target.
   \item The turret needs to be able to determine the direction, distance and speed of
 the target. This requirement is necessary as it would otherwise be impossible to
 calculate and predict where the target will be.
+  \item The target should be atleast \fix{10cm*10cm}{what is the optimal size?}, as it
+would otherwise be too small to be reliably seen by the turret sensors.
+  \item The target is able to move at a constant speed of up to 0.8m/s. In order to
+have a suitable ratio between the turrets maximum range and the targets
+speed, 0.8m/s was chosen as the speed limit.
+  \item The target needs to travel on an even plane.
 \end{itemize}
 
 \subsection{Nice to have}
@@ -56,37 +63,32 @@ variable speed.
 scenario it would be possible for more than one target to be present. This would
 then lead to a need to prioritize the targets, in order to maximize the
 amount of targets hit.
-\end{itemize}
-
-\subsection{Target Requirements}
-Blabla some target requirements
-
-\begin{itemize}
-  \item The target should be atleast \fix{10cm*10cm}{what is the optimal size?}, as it
-would otherwise be too small to be reliably seen by the turret sensors.
-  \item The target is able to move at a constant speed of up to 0.8m/s. In order to
-have a suitable ratio between the turrets maximum range and the targets
-speed, 0.8m/s was chosen as the speed limit.
   \item The target is able to accelerate and decelerate. In order to make for a
   more realistic scenario, the target should be able to speed up and slow down.
-  \item The target needs to travel on an even plane.
 \end{itemize}
 
-\section{Michaels kravspec ;)}
-The turret needs to be able to observe an area
-The length of the area is 250 cm since this is the max range that our sensors function at
-The turret will be able to search an an angle of 180 degrees
+\section{Another version of the requirements}
+This is a second take on the requirements due to a different ideas on how
+requirements should be written.\nl
 
-The turret needs to be able to detect a target entering the area
+The turret needs to be able to observe an area. The length of the area is 250cm
+since this is the max range that our sensors function at. The turret will be
+able to search an an angle of 180 degrees.\nl
+
+The turret needs to be able to detect a target entering the area.\nl
 
 The turret needs to be able to determine the speed and direction of a target
-Observing a target should yield information about the direction and speed of the target
+Observing a target should yield information about the direction and speed of
+the target.\nl
 
-The turret needs to be able to predict the location of the target
-In order to predict the target, it will need information about the speed and direction of the target
+The turret needs to be able to predict the location of the target. In order to
+predict the target, it will need information about the speed and direction of
+the target.\nl
 
-The turret needs to be able to shoot and hit a target in motion
-Be able to change position horizontally and vertically in order to adjust the trajectory of the projectile in order to hit a target at varying lengths and angles
-The turret should be able to hit anything withing its “area”
+The turret needs to be able to shoot and hit a target in motion. Be able to
+change position horizontally and vertically in order to adjust the trajectory
+of the projectile in order to hit a target at varying lengths and angles The
+turret should be able to hit anything withing its ``area''.\nl
 
-The turret needs to be able to function autonomously, without input from an user
+The turret needs to be able to function autonomously, without input from an
+user.\nl
