Reworked the red thread of ProblemDomain

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -100,5 +100,6 @@ topic:
 Three distinct phases were identified, ``Scanning", ``Tracking'' and
 ``Shooting''. Each phase was analysed in order to find the problems
 associated with it. These problems are then used as the foundtion for the
-analysis. The next chapter \fix{Need a red tread}{} will examine embedded
-systems to properly understand the constraints imposed by such a system.
+analysis. In the next chapter we will examine the what an embedded system is,
+what makes a real-time system and how machine intelligence will integrate with
+the project.
