- Changed small things

--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -10,8 +10,8 @@ intelligence could be used by an autonomous turret.
 \section{Embedded Systems}
 An embedded system is a device with limited resources both in terms of computing
 power and how much memory it has available. They are used everywhere to do small task and
-jobs. \fix{It is difficult to give an exact definition of what an embedded
-system is, but a crude definition\citep[ch.1.1]{vahid1999embedded} is}{We
+jobs. \fix{It is difficult to give an exact definition of what an
+embedded system is, but a crude definition\citep[ch.1.1]{vahid1999embedded} is}{We
 need a better definition}:\nl
 
 \textit{An  embedded  system  is  nearly  any computing system other than a desktop,
