--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -1,6 +1,6 @@
 \section{Intelligent Agents}
 
-As \namep is an autonomous turret and needs to be able to hit a moving target,
+As \name is an autonomous turret and needs to be able to hit a moving target,
 it needs to have some intelligence in order to determine how best to hit the
 target. The turret can be considered intelligent when its decisions
 are explainable by computations and its intelligence can be judged by:
@@ -14,7 +14,7 @@ are explainable by computations and its intelligence can be judged by:
 \end{enumerate}
 %See MI book, chapter 1.1 p.4
 
-In order to do this \namep needs to be able to represent the knowledge in a
+In order to do this \name needs to be able to represent the knowledge in a
 suitable way that allows it to work it into a suitable solution.
 
 
@@ -25,7 +25,7 @@ that output into a solution.\nl
 
 The representation is part of a represntation scheme, which specifies the form
 of the knowledge. All the knowledge stored on the agent that is represented by
-this represntation scheme is the knowledge base. In the case of \namep this is
+this represntation scheme is the knowledge base. In the case of \name this is
 the knowledge about the movement of the target, the vertical angle of the canon
 and the horisontal angle of the turret.\nl
 
@@ -43,7 +43,7 @@ incomplete. To do this four categories of solutions is considered:
   not guaranteed to be.
 \end{itemize}
 
-The problem that \namep should be solving is hitting a moving target. This means
+The problem that \name should be solving is hitting a moving target. This means
 that we want any solution where the tagtet is hit which is not necissarily the
 optimal solution. 
 
@@ -74,7 +74,7 @@ modular or hierarchical. If the struture is flat that means that there is only a
 single module for the whole system, Modular means that there is more than one
 module, where ech module can be understood seperatly and hierarchical means that
 each module can be broken down into smaller modules that each can be understood
-on their own. \namep is somewhat modular due to the fact that it has different
+on their own. \name is somewhat modular due to the fact that it has different
 tasks that can each be a module of its own. 
 
 \subsection{representation scheme}
