--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -81,7 +81,8 @@ The camera runs at 30 fps and with a resolution of 88 x 144. This could
 potentialy become an issue due to the fact that it is a very low resolution.
 Although this is a could be a problem, it depends on how large the
 object/objects being tracked are.
-The camera also has the ability to track up to 8 different objects. \nl
+The camera also has the ability to track up to 8 different objects
+\fix{\Source}{Kan vi refere til de tekniske specfikationer i user guide}. \nl
 
 The setup of the camera is quite simple and is done using a computer, to setup
 which color it is suposed to track. The process of choosing the color is done
