- Changed small things

--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -27,8 +27,9 @@ In addition, the following variables are used in the following sections:
 \end{itemize}
 
 By using this theorem, we can use the projectiles initial velocity, combined
-with the angle of fireing, to determine where the fired projectile will
-land.\nl
+with the angle of fireing, to determine where the fired projectile will land.\nl
+
+
 It should be noted that the formulas \autoref{slength} and \autoref{sheight} do
 not take into accound any effect air resistance could have on the projectiles
 trajectory. The topic of air resistance and the relevance thereof is discussed
