- Fixed a broken ref to a fig

--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -120,7 +120,7 @@ $\mathbf{a=45\ degrees}$ such that $\mathbf{sin(45)\approx 0.71}$ and
 $\mathbf{cos(45)\approx 0.71}$. 
 
 The relation between fireing angle and travelled distance is exemplified in
-\autoref{ProjMot.png}.
+\autoref{ProjMot2.png}.
 
 \figx[0.35]{ProjMot2.png}{Distance relative to angle of fire.}
 
