Fix fireing in testing and calculatingoffset

--- a/sections/PhysTheory/CalculatingOffset.tex
+++ b/sections/PhysTheory/CalculatingOffset.tex
@@ -1,4 +1,4 @@
-\section{Fireing Offset}
+\section{Firing Offset}
 As described in the requirements in \autoref{} the cannon needs to calculate an
 offset to be able to hit a target in motion. In order to calculate this we will
 need the air time for the projectile and the velocity of the target\nl
