--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -7,8 +7,8 @@ requiremtents.
 
 \section{Angle Test}
 As discussed in \autoref{} the turret has one main variable it can change in
-order to accurately hit the target, namely the angle of fireing. Due to the
-importance of being able to precisely set the angle of fireing, tests have been
+order to accurately hit the target, namely the angle of firing. Due to the
+importance of being able to precisely set the angle of firing, tests have been
 made to ensure that the turrets accuracy is within an acceptable margain of
 error.
 
@@ -23,15 +23,15 @@ This brick is used to measure the turrets angle. This setup can be seen in
 
 In order to test the turrets ability to set its angle correctly, two different
 tests were used to test the most likely scenarios. The first test has the turret
-retract to its resting position before setting the angle of fireing. The second
-test has the turret set the angle of fireing without retracting to the resting
+retract to its resting position before setting the angle of firing. The second
+test has the turret set the angle of firing without retracting to the resting
 position before the next test. For these tests the resting position is measured
 to be 5 degrees.
 
 \subsection{Results: Test 1}
 This test had the turret retract to its resting position before setting its
 angle of fire. Below will be presented the data from data set 2. The rest
-of the data can be found in \autoref{}. 
+of the data can be found in \autoref{}.
 
 \begin{table}[]
 \centering
@@ -47,7 +47,7 @@ Test Num:                     & 2      \\ \hline
 \multicolumn{1}{l|}{49}       & 50     \\
 \multicolumn{1}{l|}{56}       & 57     \\
 \multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 77    
+\multicolumn{1}{l|}{70}       & 77
 \end{tabular}
 \caption{Results from data set 2.}
 \label{AngleTest1Result}
@@ -56,7 +56,7 @@ Test Num:                     & 2      \\ \hline
 \subsection{Results: Test 2}
 This test had the turret set the angle as an offset based on the previously set
 angle. Below will be presented the data from data set 4.
-The rest of the data can be found in \autoref{}. 
+The rest of the data can be found in \autoref{}.
 
 \begin{table}[]
 \centering
@@ -72,7 +72,7 @@ Test Num:                     & 4      \\ \hline
 \multicolumn{1}{l|}{49}       & 48     \\
 \multicolumn{1}{l|}{56}       & 56     \\
 \multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 75    
+\multicolumn{1}{l|}{70}       & 75
 \end{tabular}
 \caption{Results from data set 4.}
 \label{AngleTest1Result}
